charon/tests/ui/regressions/inline-const-fn-item.rs
//@ known-failure

fn main() {
    const { main };
}
